tests/src/frontend/typechecking/invalid/trait_pattern_match_2.sk
trait Z
trait Y
trait X extends Y, Z {
  fun no(): void {
    this match {
    | Z _ -> void
    | _ -> void
    }
  }
}
